# qa_guru_python_5_26

./: .envexample  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/: conftest.py  test_wikipedia.py
utils/: attach.py
wikipedia_mobile_tests/model/pages/: main_page.py  settings_page.py
wikipedia_mobile_tests/utils/: attach.py
wikipedia_tests/model/: app.py
wikipedia_tests/model/pages/: main_page.py  search_results_page.py  settings_page.py
